--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- >>>>> ДОБАВИТЬ СКРИПТ TELEGRAM <<<<< -->
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <!-- >>>>> КОНЕЦ <<<<< -->
-    <title>My WooCommerce Shop</title>
+    <title>Kosynka Store</title>
   </head>
   <body>
     <div id="app"></div>
